syntax = "proto3";

package micro.apps.proto.address.v1;

option java_multiple_files = true;
option java_outer_classname = "AddressServiceProto";
option java_package = "micro.apps.proto.address.v1";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/any.proto";
import "validate/validate.proto";
import "micro/apps/proto/common/v1/common.proto";

// Address Service
service AddressService {
    rpc Get(GetRequest) returns (GetResponse);
    rpc List(ListRequest) returns (ListResponse);
    rpc Count(google.protobuf.Empty) returns (google.protobuf.UInt32Value);
    rpc Search(SearchRequest) returns (stream SearchResponse);
    rpc Create(CreateRequest) returns (google.protobuf.StringValue);
    rpc Update(UpdateRequest) returns (google.protobuf.Empty);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);

}

message GetRequest {
    google.protobuf.StringValue id = 1
    [(validate.rules).string = {min_len: 0}];
}

message GetResponse {
    micro.apps.proto.common.v1.Address address = 2;
}

message ListRequest {
    int32 page = 1;
    int32 page_size = 2;
    google.protobuf.Any filter = 3;
    repeated string sort_param = 4;
}

message ListResponse {
    map<string, micro.apps.proto.common.v1.Address> results = 1;
    google.protobuf.Int64Value count = 2;
}

message SearchRequest {
    google.protobuf.Any filter = 3;
}

message SearchResponse {
    google.protobuf.StringValue id = 1;
    micro.apps.proto.common.v1.Address address = 2;
}

message CreateRequest {
    micro.apps.proto.common.v1.Address address = 1;
}

message UpdateRequest {
    google.protobuf.StringValue id = 1;
    micro.apps.proto.common.v1.Address address = 2;
}

message DeleteRequest {
    google.protobuf.StringValue id = 1
    [(validate.rules).string = {min_len: 0}];
}
